Fix vertical alignment of border container

--- a/src/border.scss
+++ b/src/border.scss
@@ -50,6 +50,7 @@
 .border-container {
   position: relative;
   display: inline-block;
+  vertical-align: top;
   height: 100%;
   pointer-events: auto;
 
